--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     
     <body>
         <main>
-            <section>
-                <section></section>
-            </section>
+            <canvas></canvas>
         </main>
     </body>
 </html>
